CAmbios en la pagina

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Trabajos de siaweb</title>
+    <title>HACKTOBERFEST</title>
 </head>
 <body>
     <header class="header-hacktoberfest">
@@ -26,8 +26,8 @@
                 <figure>
                     <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--i7yQh5OO--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/ptcz1owx7072vky9jbyv.jpg" alt="">
                     <figcaption>
-                        <p> HACKTOBERFEST</p>
-                        <p> 2022</p>
+                        <p> HACKTOBERFEST 2022</p>
+                        <p> Hacktoberfest es un evento anual en todo el mundo que se realiza durante el mes de octubre. El evento anima a los desarrolladores de código abierto a contribuir en los repositorios a través de solicitudes de incorporación de cambios (PR)</p>
                     </figcaption>
                 </figure>
                 
